release: ship PayIn UX in v0.1.0-beta.3
